--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <a href="color-gallery.html" class="text-sm font-semibold text-dark hover:text-primary transition-colors">Color Gallery</a>
         <a href="projects.html" class="text-sm font-semibold text-dark hover:text-primary transition-colors">Projects</a>
-        <a href="contact.html" class="text-sm font-semibold text-primary transition-colors">Contact Us</a>
+        <a href="contact.html" class="text-sm font-semibold text-dark transition-colors">Contact Us</a>
       </div>
       <div class="hidden lg:flex lg:flex-1 lg:justify-end">
         <a href="request-quote.html"
@@ -170,7 +170,7 @@
           </div>
           <a href="color-gallery.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold text-dark hover:bg-neutral">Color Gallery</a>
           <a href="projects.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold text-dark hover:bg-neutral">Projects</a>
-          <a href="contact.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold text-primary hover:bg-neutral">Contact Us</a>
+          <a href="contact.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold text-dark hover:bg-neutral">Contact Us</a>
         </div>
         <div class="py-6">
           <a href="request-quote.html" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold text-accent hover:bg-neutral">Request a Quote</a>
@@ -739,71 +739,145 @@ function toggleColors() {
     </div>
 </section>
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="bg-dark text-white py-12">
-        <div class="mx-auto max-w-7xl px-6">
-            <div class="grid md:grid-cols-4 gap-8">
-                <div>
-                    <h3 class="text-xl font-heading font-bold mb-4">ChromaCraft</h3>
-                    <p class="text-gray-400">Premium paints for beautiful spaces. Crafted with care, designed to inspire.</p>
-                </div>
-                <div>
-                    <h4 class="font-bold mb-4">Products</h4>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-accent transition-colors">Interior Paints</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Exterior Paints</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Primers</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Stains</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Tools & Supplies</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="font-bold mb-4">Resources</h4>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-accent transition-colors">Color Visualizer</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">How-To Guides</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Paint Calculator</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Trend Reports</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">FAQ</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="font-bold mb-4">Company</h4>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-accent transition-colors">About Us</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Sustainability</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Careers</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Press</a></li>
-                        <li><a href="#" class="hover:text-accent transition-colors">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-500 mb-4 md:mb-0">© 2024 ChromaCraft Paints. All rights reserved.</p>
-                <div class="flex gap-6">
-                    <a href="#" class="text-gray-500 hover:text-accent transition-colors">
-                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"></path>
-                        </svg>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-accent">
-                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"></path>
-                        </svg>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-accent">
-                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"></path>
-                        </svg>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-accent">
-                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
-                        </svg>
-                    </a>
-                </div>
-            </div>
+    <div class="mx-auto max-w-7xl px-6">
+      <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div>
+          <h3 class="text-xl font-heading font-bold mb-4">ChromaPaints</h3>
+          <p class="text-gray-400 mb-6 max-w-sm">
+          Crafting beautiful spaces since 2012. Kenyan-made premium paints with global quality standards. 
+          ISO 9001 Certified • VOC Compliant • WeatherShield® Technology
+        </p>
         </div>
-    </footer>
+        <!-- Products & Solutions -->
+      <div>
+        <h4 class="font-heading text-lg font-semibold mb-4 text-white">Products</h4>
+        <ul class="space-y-3 text-gray-400">
+          <li>
+            <a href="#" class="hover:text-accent transition-colors flex items-center gap-2">
+              <span class="w-2 h-2 rounded-full bg-current"></span>
+              Interior Paints
+            </a>
+          </li>
+          <li>
+            <a href="#" class="hover:text-accent transition-colors flex items-center gap-2">
+              <span class="w-2 h-2 rounded-full bg-current"></span>
+              Exterior Solutions
+            </a>
+          </li>
+          <li>
+            <a href="#" class="hover:text-accent transition-colors flex items-center gap-2">
+              <span class="w-2 h-2 rounded-full bg-current"></span>
+              Specialty Finishes
+            </a>
+          </li>
+          <li>
+            <a href="#" class="hover:text-accent transition-colors flex items-center gap-2">
+              <span class="w-2 h-2 rounded-full bg-current"></span>
+              Professional Tools
+            </a>
+          </li>
+        </ul>
+      </div>
+
+        <div>
+        <h4 class="font-heading text-lg font-semibold mb-4 text-white">Resources</h4>
+        <ul class="space-y-3 text-gray-400">
+          <li>
+            <a href="#" class="hover:text-accent transition-colors flex items-center gap-2">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16"/>
+              </svg>
+              Color Catalog
+            </a>
+          </li>
+          <li>
+            <a href="#" class="hover:text-accent transition-colors flex items-center gap-2">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z"/>
+              </svg>
+              Paint Calculator
+            </a>
+          </li>
+          <li>
+            <a href="#" class="hover:text-accent transition-colors flex items-center gap-2">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/>
+              </svg>
+              Project Planner
+            </a>
+          </li>
+        </ul>
+      </div>
+        <div>
+        <h4 class="font-heading text-lg font-semibold mb-4 text-white">Connect</h4>
+        <div class="space-y-4">
+          <div class="flex items-center gap-3 text-gray-400 hover:text-accent transition-colors">
+            <svg class="w-5 h-5 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+            </svg>
+            <div>
+              <p class="text-sm">+254 700 123 456</p>
+              <p class="text-xs text-gray-500">Sales & Support</p>
+            </div>
+          </div>
+          
+          <div class="flex items-center gap-3 text-gray-400 hover:text-accent transition-colors">
+            <svg class="w-5 h-5 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+            </svg>
+            <span class="text-sm">info@chromapaints.co.ke</span>
+          </div>
+
+          <div class="mt-4 flex gap-4">
+            <a href="#" class="text-gray-400 hover:text-accent transition-colors" aria-label="Facebook">
+              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                <!-- Facebook icon path -->
+              </svg>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-accent transition-colors" aria-label="Instagram">
+              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                <!-- Instagram icon path -->
+              </svg>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-accent transition-colors" aria-label="YouTube">
+              
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+ 
+      <div class="border-t border-gray-700 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
+        <p class="text-gray-500 mb-4 md:mb-0">© <span id="currentYear"></span> ChromaPaints Kenya. All rights reserved.
+        </p>
+        <div class="flex gap-6">
+          <a href="#" class="text-gray-500 hover:text-accent transition-colors" aria-label="Facebook">
+            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z">
+              </path>
+            </svg>
+          </a>
+          <a href="#" class="text-gray-500 hover:text-accent transition-colors" aria-label="Instagram">
+            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z">
+              </path>
+            </svg>
+          </a>
+          <a href="#" class="text-gray-500 hover:text-accent transition-colors" aria-label="Twitter">
+            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84">
+              </path>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
     <script>
     const productsDropdownButton = document.getElementById('products-dropdown-button');
     const productsDropdown = document.getElementById('products-dropdown');
@@ -888,6 +962,8 @@ document.addEventListener('DOMContentLoaded', function() {
       }
     });
   }
+  // Set current year in footer
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
 });
 </script>
 </body>
