--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
 
     <!-- Product Filters -->
     <div class="flex flex-wrap justify-center gap-3 mb-10">
-      <button class="filter-btn px-5 py-2 rounded-full bg-primary hover:bg-primary-dark text-white font-medium transition-colors" data-filter="all">All Products</button>
-      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 hover:bg-primary/10 font-medium transition-colors" data-filter="interior">Interior Paint</button>
-      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 hover:bg-primary/10 font-medium transition-colors" data-filter="exterior">Exterior Paint</button>
-      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 hover:bg-primary/10 font-medium transition-colors" data-filter="primers">Primers</button>
-      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 hover:bg-primary/10 font-medium transition-colors" data-filter="tools">Painting Tools</button>
-      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 hover:bg-primary/10 font-medium transition-colors" data-filter="finishes">Specialty Finishes</button>
+      <button class="filter-btn px-5 py-2 rounded-full bg-primary text-white font-medium" data-filter="all">All Products</button>
+      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300  font-medium" data-filter="interior">Interior Paint</button>
+      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 font-medium" data-filter="exterior">Exterior Paint</button>
+      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 font-medium" data-filter="primers">Primers</button>
+      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 font-medium" data-filter="tools">Painting Tools</button>
+      <button class="filter-btn px-5 py-2 rounded-full border border-gray-300 font-medium" data-filter="finishes">Specialty Finishes</button>
     </div>
 
     <!-- Product Grid -->
@@ -738,7 +738,6 @@ function toggleColors() {
         </div>
     </div>
 </section>
-    <!-- Footer -->
     <!-- Footer -->
     <footer class="bg-dark text-white py-12">
     <div class="mx-auto max-w-7xl px-6">
